[package]
name = "abootimg-oxide"
edition = "2021"
description = "Android boot image (boot.img) parser"

version.workspace = true
authors.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true

# Currently set to Nixpkgs 25.05, a sane default
rust-version = "1.86.0"

[dependencies]
binrw = "0.14.0"

[lints]
workspace = true

[workspace]
members = [ "mkbootimg","unpack_bootimg"]
resolver = "2"

[workspace.package]
version = "0.2.1"
authors = ["Axel Karjalainen <axel@axka.fi>"]
repository = "https://github.com/axelkar/abootimg-oxide"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.16", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
should_panic_without_expect = "warn"
str_to_string = "warn"
string_to_string = "warn"
