[package]
name = "abootimg-oxide"
version.workspace = true
authors.workspace = true
edition = "2021"
rust-version = "1.86.0" # Same as Nixpkgs 25.05, a sane default
description = "Android boot image (boot.img) parser"
readme = "README.md"
repository.workspace = true
license.workspace = true

[dependencies]
binrw = { version = "0.14.0", default-features = false, features = ["verbose-backtrace"] }

[dev-dependencies]
expect-test-bytes = "0.1.0"

[lints]
workspace = true

[features]
default = ["std"]
std = ["binrw/std"]

[workspace]
members = [ "mkbootimg","unpack_bootimg"]
resolver = "2"

[workspace.package]
version = "0.2.2"
authors = ["Axel Karjalainen <axel@axka.fi>"]
repository = "https://github.com/axelkar/abootimg-oxide"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5.16", features = ["derive"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
should_panic_without_expect = "warn"
str_to_string = "warn"
string_to_string = "warn"
