[package]
name = "unpack_bootimg"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Reimplementation of AOSP's `unpack_bootimg` in Rust using abootimg-oxide"
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
abootimg-oxide = { path = "..", features = ["hash"] }
shlex = "1.3.0"
hex_fmt.workspace = true
sha1.workspace = true
sha2.workspace = true
